<resources>
    <string name="app_name">Quick_Cheque</string>
    <string name="cheque">Чек</string>
    <string name="distribution">Распределение</string>
    <string name="payment">Оплата</string>
    <string name="next">Продолжить</string>
    <string name="complete">Завершить</string>
    <string name="admin">Админ</string>
    <string name="participants">Участники</string>
    <string name="sumOfCheque">Сумма чека</string>
    <string name="pay">Оплатить</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragments_auth_email">Email</string>
    <string name="fragments_auth_password_1">Пароль</string>
    <string name="fragments_auth_password_2">Повторите пароль</string>
    <string name="fragments_auth_btn_register">Зарегистрироваться</string>
    <string name="fragments_auth_switch_login">Войти</string>
    <string name="fragments_auth_switch_register">Создать</string>
    <string name="fragment_login_btn_login">Войти</string>
    <string name="fragment_login_forgot_password">Забыли пароль?</string>
    <string name="join_room_btn">Присоединиться</string>
    <string name="scan_qr_btn">Отсканировать QR</string>
    <string name="or">ИЛИ</string>
    <string name="enter_id_room">Введите id комнаты:</string>
    <string name="join_room">Присоединиться к комнате</string>
    <string name="check_count">Кол-во чеков:</string>
    <string name="users_count">Кол-во участников:</string>
    <string name="creator_name">Создатель:</string>
    <string name="choose_language">Выбрать язык:</string>
    <string name="russian_locale">🇷🇺</string>
    <string name="english_language">🏳️‍🌈</string>
    <string name="choose_theme">Выбрать тему:</string>
    <string name="day_theme">🌝</string>
    <string name="night_theme">🌚</string>
    <string name="default_user_name">Владислав</string>
    <string name="fragment_profile_id">id: </string>
    <string name="default_user_id">Vn32gp</string>
    <string name="profile_opt_friends">Друзья</string>
    <string name="profile_opt_settings">Настройки</string>
    <string name="profile_opt_card">Обратная связь</string>
    <string name="profile_opt_history">Закрытые чеки</string>
    <string name="payment_sum">Итого % р</string>
    <string name="cheque_is_closed">Чек закрыт</string>
    <string name="wait_for_cheque">Ожидайте окончания распределения чека</string>
    <string name="cheque_count_in_room">Количество Чеков:</string>
    <string name="room_members_str">Участники:</string>
    <string name="create_room">Создать Комнату</string>
    <string name="room_name">Название Комнаты</string>
    <string name="create_roo">Создать</string>
    <string name="payment_choice">Выбрать способ оплаты</string>
    <string name="members_count_in_room">Количество участников:</string>
    <string name="name_cheque">Название чека</string>
    <string name="fragments_auth_username">Имя</string>
    <string name="rooms">Комнаты</string>
    <string name="new_room">Создать</string>
    <string name="join">Войти</string>
    <string name="profile">Профиль</string>
    <string name="register">Регистрация</string>
    <string name="settings">Настройки</string>
    <string name="profile_logout">Выйти</string>
</resources>