<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fragment_profile_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/purple_700">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:padding="16dp"
            android:textStyle="bold"
            android:text="@string/settings"
            android:textColor="@color/white"/>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/choose_language"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/language_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_russian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian_locale" />

        <RadioButton
            android:id="@+id/radio_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english_language" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:text="@string/choose_theme"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/theme_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_theme" />

        <RadioButton
            android:id="@+id/radio_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night_theme" />

    </RadioGroup>

</LinearLayout>