<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.main_pages_fragments.JoinScreenFragment"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/fragment_profile_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_profile_top"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:paddingBottom="100dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="96dp"
            android:gravity="top"
            android:text="@string/join_room"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="96dp"
            android:gravity="top"
            android:text="@string/enter_id_room"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/qr_button"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/scan_qr_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/style_orange_button_next"
            android:paddingTop="1dp"
            android:paddingBottom="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/join_room_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>