<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    tools:context=".screens.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/auth_container">

        <FrameLayout
            android:id="@+id/fragment_login_background"
            style="@style/auth_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            style="@style/auth_switch_background"
            app:layout_constraintBottom_toBottomOf="@id/fragment_register_switch_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_register_switch_register" />

        <Button
            android:id="@+id/fragment_register_switch_register"
            style="@style/auth_switch_btn"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/gray_light"
            android:text="@string/fragments_auth_switch_register"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/fragment_register_switch_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/fragment_register_switch_login"
            style="@style/auth_switch_btn"
            android:layout_marginEnd="35dp"
            android:text="@string/fragments_auth_switch_login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_register_switch_register"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/auth_field_text"
            android:text="@string/fragments_auth_email"
            app:layout_constraintBottom_toTopOf="@+id/fragment_login_email_field"
            app:layout_constraintEnd_toEndOf="@+id/fragment_login_email_field"
            app:layout_constraintStart_toStartOf="@+id/fragment_login_email_field" />

        <EditText
            android:id="@+id/fragment_login_email_field"
            style="@style/auth_field"
            android:layout_marginTop="60dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_register_switch_register" />

        <TextView
            style="@style/auth_field_text"
            android:text="@string/fragments_auth_password_1"
            app:layout_constraintBottom_toTopOf="@+id/fragment_login_password_1_field"
            app:layout_constraintEnd_toEndOf="@+id/fragment_login_password_1_field"
            app:layout_constraintStart_toStartOf="@+id/fragment_login_password_1_field" />

        <EditText
            android:id="@+id/fragment_login_password_1_field"
            style="@style/auth_field"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="335dp"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_email_field" />

        <TextView
            android:id="@+id/fragment_login_forgot_btn"
            style="@style/auth_field_text"
            android:layout_marginTop="6dp"
            android:text="@string/fragment_login_forgot_password"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="@+id/fragment_login_password_1_field"
            app:layout_constraintStart_toStartOf="@+id/fragment_login_password_1_field"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_password_1_field" />

        <Button
            android:id="@+id/fragment_login_login_btn"
            style="@style/auth_bottom_btn"
            android:text="@string/fragment_login_btn_login"
            app:layout_constraintBottom_toBottomOf="@id/fragment_login_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
