<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.screen.main_pages_fragments.ProfileScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fragment_profile_top"
            style="@style/profile_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/fragment_profile_background"
            style="@style/profile_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            style="@style/profile_change_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/fragment_profile_user_picture"
            style="@style/profile_user_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/profile_user_name"
            app:layout_constraintStart_toEndOf="@id/fragment_profile_user_picture"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/profile_id"
            app:layout_constraintBottom_toBottomOf="@id/fragment_profile_user_id"
            app:layout_constraintEnd_toStartOf="@id/fragment_profile_user_id" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/profile_user_id"
            android:id="@+id/fragment_profile_user_id"
            app:layout_constraintBottom_toTopOf="@id/fragment_profile_background"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/choose_language"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/language_radiogroup"
            app:layout_constraintBottom_toTopOf="@id/language_radiogroup"/>

        <RadioGroup
            android:id="@+id/language_radiogroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="@id/fragment_profile_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/language_radiogroup_ru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/russian_locale" />

            <RadioButton
                android:id="@+id/language_radiogroup_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english_language" />

        </RadioGroup>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/choose_theme"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/theme_radiogroup"
            app:layout_constraintBottom_toTopOf="@id/theme_radiogroup"/>

        <RadioGroup
            android:id="@+id/theme_radiogroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/language_radiogroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <RadioButton
                android:id="@+id/theme_radiogroup_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_theme" />

            <RadioButton
                android:id="@+id/theme_radiogroup_night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night_theme" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
