<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackGroundColorAuth"
    android:fillViewport="true"
    tools:context=".presentation.screen.auth_pages_fragment.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/white_corner_radius_6dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="400dp"
            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragment_auth_switch_container"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="40dp"
                android:background="@drawable/light_gray_corner_radius_6dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/switch_button_login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/switch_button_register"
                    style="@style/auth_switch_btn"
                    android:backgroundTint="@color/ButtonColor"
                    android:text="@string/fragments_auth_switch_register"
                    android:textColor="@color/white" />

                <Button
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/switch_button_register"
                    android:id="@+id/switch_button_login"
                    style="@style/auth_switch_btn"
                    android:text="@string/fragments_auth_switch_login" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/fragment_auth_field_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/register_btn"
                app:layout_constraintTop_toBottomOf="@+id/fragment_auth_switch_container">

                <TextView
                    style="@style/auth_field_text"
                    android:text="@string/fragments_auth_username" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_register_username_field"
                    style="@style/auth_field_new">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_username"
                        style="@style/auth_field_text_new"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/username_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_error"
                    tools:text="Это неверный формат имени пользователя!" />

                <TextView
                    style="@style/auth_field_text"
                    android:layout_marginTop="5dp"
                    android:text="@string/fragments_auth_email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_register_email_field"
                    style="@style/auth_field_new">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_login"
                        style="@style/auth_field_text_new"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/email_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_error"
                    tools:text="Это неверный формат почты!" />

                <TextView
                    android:id="@+id/password_text"
                    style="@style/auth_field_text"
                    android:layout_marginTop="5dp"
                    android:text="@string/fragments_auth_password_1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_register_password_1_field"
                    style="@style/auth_field_new"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_password"
                        style="@style/auth_field_text_new"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/password_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_error"
                    tools:text="Это неверный формат пароля!" />

                <TextView
                    android:id="@+id/repeated_text_input"
                    style="@style/auth_field_text"
                    android:layout_marginTop="5dp"
                    android:text="@string/fragments_auth_password_2" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_register_password_2_field"
                    style="@style/auth_field_new"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/repeated_input_password"
                        style="@style/auth_field_text_new"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/repeated_password_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_error"
                    tools:text="Пароли не сходятся!" />
            </LinearLayout>

            <Button
                android:id="@+id/register_btn"
                style="@style/auth_bottom_btn"
                android:layout_gravity="center"
                android:text="@string/fragments_auth_btn_register" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>